added sortfield to pokemonlist

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+@font-face {
+  font-family: "pokemon";
+  src: local("pokemon"),
+   url("./fonts/pokemon.ttf") format("truetype");
+  font-weight: bold;
+ }
