--- a/src/app/Search.scss
+++ b/src/app/Search.scss
@@ -1,6 +1,7 @@
 
+
 .Search {
-    flex-grow: 5;
+    // flex-grow: 4;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -9,7 +10,7 @@
       width: 200px;
       height: 3rem;
       outline: 0;
-      flex-grow: 2;
+      // flex-grow: 2;
       border: 0;
       outline: 0;
       background: transparent;
@@ -17,16 +18,45 @@
       font-family: "pokemon";
       font-size: 2rem;
       padding: 1rem;
+      text-align: center;
     }
+
+    .dropdown {
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      padding: 2px;
+      margin: 2px;
+    }
+   
     
     button {
-      height: 36px;
-      width: 36px;
+      // height: 36px;
+      // width: 36px;
       cursor: pointer;
-      border: 0px;
+      border: 5px black solid;
+      border-radius: 20px;
       background: transparent;
       font-size: 2rem;
-      
+      margin: 5px; 
+
     }
-  
+
+    button:hover {
+      background: black;
+      color: white;
+    }
+   
   }
+
+  .Paging {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 5px;
+
+    span {
+      padding: 5px;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    }
+  }
+
