--- a/src/app/Search.scss
+++ b/src/app/Search.scss
@@ -1,20 +1,25 @@
-
+.search-options {
+  display: flex;
+  flex-direction: column;
+}
 
 .Search {
-    // flex-grow: 4;
+    margin: 20px;
+    flex-grow: 4;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-direction: column;
     
     input {
-      width: 200px;
+      width: 500px;
       height: 3rem;
       outline: 0;
-      // flex-grow: 2;
+      flex-grow: 2;
       border: 0;
       outline: 0;
       background: transparent;
-      border-bottom: 1px solid black;
+      border-bottom: 3px solid black;
       font-family: "pokemon";
       font-size: 2rem;
       padding: 1rem;
@@ -24,8 +29,11 @@
     .dropdown {
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       padding: 2px;
-      margin: 2px;
+      margin: 10px;
+      border: 2px solid black;
+      border-radius: 5px;
     }
+    
    
     
     button {
@@ -36,8 +44,13 @@
       border-radius: 20px;
       background: transparent;
       font-size: 2rem;
-      margin: 5px; 
-
+      margin: 10px; 
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    }
+      button:hover {
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        transform: translate(-1px, -1px) scale(1.01);
     }
 
     button:hover {
@@ -52,6 +65,18 @@
     flex-direction: column;
     justify-content: center;
     margin: 5px;
+    margin-top: 0px;
+    align-self: center;    
+    button {
+      background: white;
+      border-radius: 5px;
+      border: 2px solid black;
+    }
+
+    button:hover {
+      background: black;
+      color: white;
+    }
 
     span {
       padding: 5px;
